snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.module.md5
c460a44445d783a37011a742599f322e